--- a/src/app/pages/register/components/register-admin-logist-third/register-admin-logist-third.component.html
+++ b/src/app/pages/register/components/register-admin-logist-third/register-admin-logist-third.component.html
@@ -230,5 +230,10 @@
 <!--=====================================
 	TOAST ALERT MENSAJE
 ======================================-->
-<cwc-snackbar id='toast-message-driver' [message]="toastMessage" cta-message="dismiss" auto-hide-duration='5000'>
-</cwc-snackbar>
+<cwc-modal id='alert-modal-succes' [open]="alertError" close-on-bd-click="false" show-close-btn="false">
+  <div style='text-align: center'>
+      <cwc-icon size='120px' color="true-red"></cwc-icon>
+      <h4 class='modal--confirmation__message'>Error Correo</h4>
+      <p>El correo ingresado ya existe, por favor ingrese nuevamente un correo nuevo.</p>
+  </div>
+</cwc-modal>
