--- a/src/app/pages/vehicles/update-archives-vehicle/update-archives-vehicle.page.html
+++ b/src/app/pages/vehicles/update-archives-vehicle/update-archives-vehicle.page.html
@@ -4,7 +4,7 @@
     <div class="attr-name" style="padding-left: 1rem; font-size: large; font-weight: 900;">Actualizar documentos</div>
   </div>
 </cwc-header>
-<div slot="main" class="content">
+<div class="content">
   <div class="content-title-register">
     <h4>Seleccione el documento que desea actualizar</h4>
   </div>
