--- a/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
+++ b/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
@@ -17,7 +17,7 @@
         </div>
         <div class="section">
           <cwc-input class="input" label='Placa' formControlName="LicenseVehiculo" design-version="v2"
-            placeholder="Agrega número de serie" maxlength="20" required></cwc-input>
+            placeholder="Agrega número de placa" maxlength="20" required></cwc-input>
         </div>
         <div class="section">
           <cwc-input class="input" label='Tipo de trailer' formControlName="TypeTrailer"
